force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__IsActiveAutoContact__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsActiveAutoContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動関連づけ_取引先責任者有効</label>
    <type>Checkbox</type>
</CustomField>