force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__IsActiveAutoLead__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsActiveAutoLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動関連づけ_リード有効</label>
    <type>Checkbox</type>
</CustomField>