force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__IsActiveAutoPromotionLead__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsActiveAutoPromotionLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リード自動昇格有効</label>
    <type>Checkbox</type>
</CustomField>