force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__IsActiveBulkUpdateContactDecision__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsActiveBulkUpdateContactDecision__c</fullName>
    <formula>Sansan_CI__IsActiveToContact__c &amp;&amp; Sansan_CI__IsActiveBulkUpdateContact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先責任者一括更新有効判定</label>
    <type>Checkbox</type>
</CustomField>