force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__IsActiveBulkUpdateLeadDecision__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsActiveBulkUpdateLeadDecision__c</fullName>
    <formula>Sansan_CI__IsActiveToLead__c &amp;&amp; Sansan_CI__IsActiveBulkUpdateLead__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>リード一括更新有効判定</label>
    <type>Checkbox</type>
</CustomField>