force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__IsActiveCampaign__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsActiveCampaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リード新規登録/更新時のキャンペーン登録</label>
    <type>Checkbox</type>
</CustomField>