force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__IsActiveContactActivity__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsActiveContactActivity__c</fullName>
    <defaultValue>true</defaultValue>
    <label>取引先責任者の活動登録</label>
    <type>Checkbox</type>
</CustomField>