force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__IsActiveInsertAccount__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsActiveInsertAccount__c</fullName>
    <defaultValue>true</defaultValue>
    <label>取引先新規登録有効</label>
    <type>Checkbox</type>
</CustomField>