force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__IsActiveInsertAccountDecision__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsActiveInsertAccountDecision__c</fullName>
    <formula>Sansan_CI__IsActiveInsertContactDecision__c &amp;&amp;  Sansan_CI__IsActiveInsertAccount__c</formula>
    <label>取引先新規登録有効判定</label>
    <type>Checkbox</type>
</CustomField>