force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__IsActiveInsertLeadDecision__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsActiveInsertLeadDecision__c</fullName>
    <formula>Sansan_CI__IsActiveToLead__c &amp;&amp;  Sansan_CI__IsActiveInsertLead__c</formula>
    <label>リード新規登録有効判定</label>
    <type>Checkbox</type>
</CustomField>