force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__IsActiveLeadActivity__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsActiveLeadActivity__c</fullName>
    <defaultValue>true</defaultValue>
    <label>リードの活動登録</label>
    <type>Checkbox</type>
</CustomField>