force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__IsActiveLeadCampaignMemberAutoRegist__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsActiveLeadCampaignMemberAutoRegist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リード_キャンペーンメンバー自動登録有効</label>
    <type>Checkbox</type>
</CustomField>