force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__IsActiveLeadCityPartialMatchSearch__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsActiveLeadCityPartialMatchSearch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リード_市区郡の部分一致検索</label>
    <type>Checkbox</type>
</CustomField>