force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__IsActiveLocationTransfer__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsActiveLocationTransfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引先責任者を所属拠点の取引先に移動する</label>
    <type>Checkbox</type>
</CustomField>