force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__IsActiveUpdateAccount__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsActiveUpdateAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引先更新有効</label>
    <type>Checkbox</type>
</CustomField>