force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__IsActiveUpdateLead__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsActiveUpdateLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リード更新有効</label>
    <type>Checkbox</type>
</CustomField>