force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__IsBulkDataOrganization__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsBulkDataOrganization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>大量データ組織</label>
    <type>Checkbox</type>
</CustomField>