force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__IsBusinessLocationListFeatureActivated__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsBusinessLocationListFeatureActivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>拠点リスト機能アクティベート済</label>
    <type>Checkbox</type>
</CustomField>