force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__Lead_SearchFields__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Lead_SearchFields__c</fullName>
    <label>検索項目_リード</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>