force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__LeadAutoPromotionBatchExeTime__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__LeadAutoPromotionBatchExeTime__c</fullName>
    <label>リード自動昇格バッチ起動時間（毎時起動）</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>