force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__LeadSearchCondition_MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__LeadSearchCondition_MobilePhone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>携帯</label>
    <type>Checkbox</type>
</CustomField>