force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__LeadSearchConditionCustomerName__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__LeadSearchConditionCustomerName__c</fullName>
    <label>名前</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LastName</fullName>
                <label>姓</label>
            </value>
            <value>
                <fullName>FullName</fullName>
                <label>姓 + 名</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>