force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__LeadSearchConditionPhone__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__LeadSearchConditionPhone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>電話</label>
    <type>Checkbox</type>
</CustomField>