force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__NayoseSetupBulkDataLimit__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__NayoseSetupBulkDataLimit__c</fullName>
    <label>名寄せ設定大量データ基準値</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>