force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__NayoseSetupIdentifyField__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__NayoseSetupIdentifyField__c</fullName>
    <label>名寄せ設定識別項目</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>