force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__NayoseSetupMapping__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__NayoseSetupMapping__c</fullName>
    <label>名寄せ設定マッピング</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>