force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__NayoseSetupPossibleFlg__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__NayoseSetupPossibleFlg__c</fullName>
    <defaultValue>true</defaultValue>
    <label>名寄せ設定可能</label>
    <type>Checkbox</type>
</CustomField>