force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__PackageUpgradeDateTime__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__PackageUpgradeDateTime__c</fullName>
    <label>Sansan_CI 最終パッケージ更新日時</label>
    <type>DateTime</type>
</CustomField>