force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__PackageUpgradeUser__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__PackageUpgradeUser__c</fullName>
    <label>Sansan_CI 最終パッケージ更新者ユーザ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>