force-app/main/default/objects/Sansan_CI__BizCard_Settings__c/fields/Sansan_CI__SLCMode__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__SLCMode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引先を拠点単位で関連づけする</label>
    <type>Checkbox</type>
</CustomField>